# soft_projict_set

bare_drive/framework/: test.c
bare_drive/gpio/: test.c
bare_drive/serial/: test.c
c_datastruct/: a.out  test.cpp
cjson_application/: CMakeLists.txt  cross.cmake  test.cpp
cjson_application/inc/: cjson_application.h  cjson_application_data.h
cjson_application/lib/: libcjson.so.1.7.10
cjson_application/src/: cjson_application.cpp
cmake/: CMakeLists.txt  test.cpp
cmake/test_bin/: CMakeLists.txt  test_bin.cpp
cmake/test_lib/: CMakeLists.txt  cross.cmake  test_lib.cpp
design_pattern/: a.out  test.cpp
design_pattern/abstract_factory/: a.out  test.cpp
design_pattern/action_method/: command_pattern.cpp  iterator_pattern.cpp  plot_patten.cpp  publish_subsrcibe_pattern.cpp  state_patten.cpp
design_pattern/adapter_pattern/: a.out  test.cpp
design_pattern/bridge_pattern/: a.out  test.cpp
design_pattern/builder/: a.out  test.cpp
design_pattern/command_pattern/: a.out  test.cpp
design_pattern/component_method/: a.out  test.cpp
design_pattern/create_method/: abstract_factory.cpp  builder_factory.cpp  clone_method.cpp  factory_method.cpp  single_factory.cpp
design_pattern/decorator_pattern/: a.out  test.cpp
design_pattern/facade_method/: a.out  test.cpp
design_pattern/factory_method/: a.out  test.cpp
design_pattern/flyweight_method/: a.out  test.cpp
design_pattern/iterator_pattern/: a.out  test.cpp
design_pattern/mediator_pattern/: a.out  test.cpp
design_pattern/memento_pattern/: a.out  test.cpp
design_pattern/observer_pattern/: a.out  test.cpp
design_pattern/prototype/: a.out  test.cpp
design_pattern/proxy_method/: a.out  test.cpp
design_pattern/responsibility_parttern/: a.out  test.cpp
design_pattern/single_factory/: a.out  test.cpp
design_pattern/singleton/: a.out  test.cpp
design_pattern/state_pattern/: a.out  test.cpp
design_pattern/visitor_pattern/: a.out  test.cpp
driver/: .hello.ko.cmd  .hello.mod.o.cmd
driver/.tmp_versions/: hello.mod
driver/char/.tmp_versions/: hello.mod
driver/char/hello/: .hello.ko.cmd  .hello.mod.o.cmd  .hello.o.cmd  hello_test.c
driver/test/hello/: hello.c
ini_parser/: CMakeLists.txt  a.out  audio  ini_parser.cpp  ini_parser.h  test.cpp
linux_application/: a.out  add.cpp  client  client.cpp  client_chassis.cpp  client_chassis.h  client_file.cpp  cstring  cstring.cpp  hello  server  server.cpp  server_file.cpp  server_ubuntu.cpp  test.cpp  zhengyang.txt
linux_driver/: .cache.mk  .hello.o.cmd
linux_driver/char/: .cache.mk
linux_driver/char/gpio/: gpio.c  test.c
linux_driver/char/hello/: .cache.mk  Makefile  hello.c  hello.ko  hello.mod.c  mkdev.sh  modules.order  test  test.c
linux_driver/char/usb/: usb.c
linux_verify/: readme.md  readme.txt
linux_verify/bareboard/: Makefile
linux_verify/bareboard/imx6ul/: cc.h
linux_verify/bareboard/project/: start.S  test.c
linux_verify/driver/: test.c
linux_verify/kernel/: test.c
linux_verify/rootfs/: test.c
linux_verify/tmp/: smb.conf  vscode.conf
linux_verify/uboot/: test.c  test.sh  uboot.dir.notes
makefile/: Makefile  hello.c
qt_project/: menu.db  test.qrc  testDB.db
qt_project/Button/: Button  Button.cpp  Button.pro  Makefile
qt_project/Calculator/: Calculator  Calculator.pro  CalculatorDialog.cpp  CalculatorDialog.h  Makefile
qt_project/Calculator2/: .ui_CalculatorDialog.h.swp  Calculator2  Calculator2.pro  CalculatorDialog.cpp  Makefile
qt_project/Calculator3/: Calculator3.pro  CalculatorDialog.cpp
qt_project/Change/: Change  Change.cpp  Change.pro  Makefile
qt_project/Close/: Close  Close.cpp  Close.pro  Makefile
qt_project/Ernie/: Ernie.pro.user.add060e  Makefile
qt_project/Hello/: Hello  Hello.cpp  Hello.pro  Makefile
qt_project/Hello2/: Hello  Hello.cpp  Makefile
qt_project/Keyboard/: Keyboard  Keyboard.pro  Keyboard.pro.user.add060e  KeyboardDialog.cpp  KeyboardDialog.ui  Makefile
qt_project/Login/: Login  LoginDialog.h  Makefile  main.cpp
qt_project/Parent/: Makefile  Parent  Parent.cpp  Parent.pro
qt_project/Semaphore/: Makefile  Semaphore.pro.user.add060e  main.cpp
qt_project/ShowPics/: qrc_showpics.cpp  ui_ShowPicsDialog.h
qt_project/Sqlite/: Makefile  Sqlite.pro
qt_project/Thread/: Makefile  Thread.pro.user.add060e  moc_threaddialog.cpp  ui_threaddialog.h  workthread.cpp  workthread.h
qt_project/Time/: Makefile  Time  Time.pro  TimeDialog.cpp  TimeDialog.h  main.cpp
qt_project/Time2/: Makefile  Time2  Time2.pro  TimeDialog.h  TimeDialog.ui
qt_project/code_ui/: Makefile  calc.cpp  calc.h  moc_calc.cpp  test  test.cpp  test.pro
qt_project/hello_designer2/: hello2.pro  widget.cpp
qt_project/hello_desinger/: hello.pro  mainwindow.ui
qt_project/qstring/: Makefile  qstring.pro
std_application/list/: a.out
std_application/map/: test.cpp
std_application/vector/: test.cpp
std_c/: a.out  c_test.cpp  c_test.readme  test.cpp
std_c++/: a.out  c++_test.cpp  c++_test.readme  test.cpp
stl_application/list/: test.cpp
stl_application/map/: a.out  test.cpp
stl_application/set/: a.out  test.cpp
stl_application/st/: a.out  test.cpp
stl_application/string/: a.out  test.cpp
stl_application/vector/: a.out
time_module/: a.out  test  test.cpp  time.sh  time_module.cpp  time_module.h
tinyalsa_application/: CMakeLists.txt  cross.cmake  test.cpp
tinyalsa_application/audio/: AudioService.cpp  AudioService.h  CTypes.h  TinyMix.cpp  TinyMix.h  TinyPlay.cpp  TinyPlay.h  Tinymp3Play.cpp  Tinymp3Play.h
tinyalsa_src/: .travis.yml  Makefile  tinycap  tinymix  tinypcminfo  tinyplay  tinyplay.c
tinyalsa_src/include/: limits.h
tinyalsa_src/src/: limits.c  mixer.c  pcm.c  tinycap.c  tinymix.c  tinypcminfo.c  tinyplay.c
uart_module/: CMakeLists.txt
uart_module/chassis_port/chassis_port/src/: uart.cpp
uart_module/chassis_port/src/: chassis_port.cpp  uart.cpp
uart_module/inc/: chassis_port.h
uart_module/src/: chassis_port.cpp  test  test.cpp  uart  uart.h
yaml_parser/: CMakeLists.txt  config.yaml  cross.cmake  test.cpp
yaml_parser/yaml-cpp/: add.h
(+187 files in other folders)
